# flutter_ffigen_study

./: README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_ffigen_study_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_ffigen_study.podspec
lib/: duktape_bindings_generated.dart  flutter_ffigen_study.dart  flutter_ffigen_study_bindings_generated.dart
linux/: CMakeLists.txt
macos/: flutter_ffigen_study.podspec
macos/Classes/: flutter_ffigen_study.c
src/: CMakeLists.txt  flutter_ffigen_study.c
windows/: CMakeLists.txt
